syntax = "proto3";

package com.aconno.protobufs;

option java_package = "com.aconno.sensorics.device.beacon.protobuffers.generatedmodel";
option java_outer_classname = "ParametersProtobufModel";

message Parameters {
    map<string,ParameterGroup> groups = 1;
    Config config = 2;


    message Config {
        uint32 name_size = 1;
        uint32 unit_size = 2;
        uint32 max_value_size = 3;
    }
}

message ParameterGroup {
    repeated BooleanParameter boolean_parameter = 1;
    repeated UIntParameter uint8_parameter = 2;
    repeated UIntParameter uint16_parameter = 3;
    repeated UIntParameter uint32_parameter = 4;
    repeated IntParameter int8_parameter = 5;
    repeated IntParameter int16_parameter = 6;
    repeated IntParameter int32_parameter = 7;
    repeated FloatParameter float_parameter = 8;
    repeated EnumParameter enum_parameter = 9;
    repeated StringParameter string_parameter = 10;
}


message NumberParameterSettings {
    string unit = 1;
    int32 min = 2;
    int32 max = 3;
}

message CommonParameterAttributes {
    bool writable = 1;
    bool eventable = 2;
    bool cacheSupported = 3;
    bool cacheEnabled = 4;
    string name = 5;
}



/////////////////////////////////////////////////////////////
//PARAMETERS FOR DIFFERENT PARAMETER TYPES /////////////////
///////////////////////////////////////////////////////////


message BooleanParameter {
    CommonParameterAttributes common_attributes = 1;
    bool value = 2;
}

message IntParameter {
    CommonParameterAttributes common_attributes = 1;
    int32 value = 2;
    NumberParameterSettings settings = 3;
}

message UIntParameter {
    CommonParameterAttributes common_attributes = 1;
    uint32 value = 2;
    NumberParameterSettings settings = 3;
}

message FloatParameter {
    CommonParameterAttributes common_attributes = 1;
    float value = 2;
    NumberParameterSettings settings = 3;
}

message StringParameter {
    CommonParameterAttributes common_attributes = 1;
    string value = 2;
}

message EnumParameter {
    CommonParameterAttributes common_attributes = 1;
    int32 value = 2;
    string unit = 3;
    repeated string choice = 4;
}


